fix(media-carousel): increase swiper scrollbar size on mobile, disable glitchy snapOnRelease

--- a/src/styles/swiper.css
+++ b/src/styles/swiper.css
@@ -3,13 +3,14 @@
  */
 :root {
   --swiper-navigation-size: 66px;
-  --swiper-navigation-size: 66px;
   --swiper-pagination-bullet-size: 12px;
   --swiper-scrollbar-bg-color: rgba(255, 255, 255, 0.1);
   --swiper-scrollbar-drag-bg-color: rgba(255, 255, 255, 0.8);
-  --swiper-scrollbar-size: 8px;
   --swiper-scrollbar-sides-offset: 0%;
-  --swiper-scrollbar-right: 4px;
+  --swiper-scrollbar-size: 12px;
+  @media (min-width: 1024px) {
+    --swiper-scrollbar-size: 8px;
+  }
 
   /* --swiper-scrollbar-top: 0px; */
   /* --swiper-scrollbar-bottom: auto; */
@@ -21,6 +22,7 @@
   --swiper-navigation-color: var(--swiper-theme-color);
   */
 }
+
 /* .swiper-button-prev, */
 /* .swiper-button-next { */
 /*   position: absolute; */
